# UW-Winter2023-EEP522-Project

./: LICENSE  README.md  main.py  pyproject.toml
server_health_check/: config.py  openai.py  server_health_check.py
sftp_manager/: config.py  sftp_agent.py  sftp_manager.py
